--- a/Casa-Abierta-main/Casa-Abierta-main/computec.html
+++ b/Casa-Abierta-main/Casa-Abierta-main/computec.html
@@ -6,133 +6,7 @@
   <title>Computec - Casa Abierta</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <style>
-    :root {
-      --primary-color: #0033A0;
-      --secondary-color: #0066CC;
-      --accent-color: #27AE60;
-      --dark-color: #1A252F;
-      --light-color: #ECF0F1;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--light-color);
-      color: var(--dark-color);
-    }
-
-    .navbar {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%) !important;
-      box-shadow: 0 4px 20px rgba(0,51,160,0.1);
-    }
-
-    .navbar-brand {
-      font-weight: 700;
-      color: white !important;
-    }
-
-    .hero {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-      color: white;
-      padding: 4rem 0;
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: 800;
-      margin-bottom: 1rem;
-    }
-
-    .hero .badge {
-      background: var(--accent-color);
-      font-size: 1.2rem;
-      padding: 0.5rem 1rem;
-    }
-
-    .content-section {
-      padding: 4rem 0;
-    }
-
-    .info-card {
-      background: white;
-      border-radius: 20px;
-      padding: 2rem;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-      margin-bottom: 2rem;
-      border: 2px solid #E2E8F0;
-    }
-
-    .info-card h3 {
-      color: var(--primary-color);
-      font-weight: 700;
-      margin-bottom: 1.5rem;
-      display: flex;
-      align-items: center;
-    }
-
-    .info-card h3 i {
-      margin-right: 0.5rem;
-      color: var(--accent-color);
-    }
-
-    .feature-list {
-      list-style: none;
-      padding: 0;
-    }
-
-    .feature-list li {
-      padding: 0.5rem 0;
-      border-bottom: 1px solid #E2E8F0;
-      display: flex;
-      align-items: center;
-    }
-
-    .feature-list li:last-child {
-      border-bottom: none;
-    }
-
-    .feature-list li i {
-      color: var(--accent-color);
-      margin-right: 1rem;
-      width: 20px;
-    }
-
-    .btn-back {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      border: none;
-      padding: 1rem 2rem;
-      border-radius: 50px;
-      color: white;
-      font-weight: 600;
-      text-decoration: none;
-      display: inline-block;
-      margin-top: 2rem;
-      transition: all 0.3s ease;
-    }
-
-    .btn-back:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 20px rgba(0,51,160,0.3);
-      color: white;
-      text-decoration: none;
-    }
-
-    .highlight-box {
-      background: linear-gradient(135deg, #FFF3CD 0%, #FFEAA7 100%);
-      border: 2px solid #F39C12;
-      border-radius: 15px;
-      padding: 2rem;
-      margin: 2rem 0;
-      text-align: center;
-    }
-
-    .highlight-box h4 {
-      color: #8B4513;
-      font-weight: 700;
-      margin-bottom: 1rem;
-    }
-  </style>
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar -->
@@ -165,7 +39,7 @@
     <div class="container">
       <h1><i class="fas fa-laptop me-3"></i>Programa de Computec</h1>
       <p class="lead">Tecnología de la Información y Computación</p>
-      <span class="badge">3 años académicos</span>
+      <button class="btn btn-outline-primary">3 años académicos de Computec</button>
     </div>
   </section>
 
@@ -194,8 +68,8 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
     <!-- Información del Maestro -->
     <div class="info-card">
       <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
-      <p><strong>Nombre:</strong> Roberto Vazquez Vazquez</p>
-      <p><strong>Años de experiencia:</strong> 10 años</p>
+      <p><strong>Nombre:</strong> Roberto Vázquez Vázquez</p>
+      <p><strong>Años de experiencia:</strong> 17 años</p>
       <p><strong>Correo electrónico:</strong> de167766@miescuela.pr</p>
     </div>
 
@@ -205,12 +79,12 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
       <div class="row">
         <div class="col-md-6">
           <ul class="feature-list">
-            <li><i class="fas fa-tools"></i>Reparacion de computadoras y administracion de redes.</li>
+            <li><i class="fas fa-tools"></i>Reparación de computadoras y administración de redes.</li>
             <li><i class="fas fa-bolt"></i>Electricidad basica tecnicos de computadora.</li>
             <li><i class="fas fa-database"></i>Data Recovery</li>
             <li><i class="fas fa-cloud"></i>Cloud computing</li>
             <li><i class="fas fa-shield-alt"></i>Cybersecurity</li>
-            <li><i class="fas fa-code"></i>Programacion basica</li>
+            <li><i class="fas fa-code"></i>Programación básica</li>
             <li><i class="fas fa-robot"></i>Inteligencia Artificial</li>
             <li><i class="fas fa-gamepad"></i>Gaming</li>
             <li><i class="fas fa-print"></i>3D printer</li>
@@ -245,6 +119,17 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
     <div class="highlight-box">
       <h4><i class="fas fa-star"></i>¿Por qué elegir Computec?</h4>
       <p>En un mundo cada vez más digital, las habilidades en tecnología de la información son esenciales. Nuestro programa te prepara para una carrera exitosa en el sector tecnológico con prácticas reales y profesores experimentados.</p>
+    </div>
+
+    <!-- Redes Sociales -->
+    <div class="info-card">
+      <h3><i class="fas fa-share-alt"></i>Redes Sociales</h3>
+      <p>Síguenos en nuestras redes sociales para más información y actualizaciones:</p>
+      <ul class="feature-list">
+       <li><a href="https://www.facebook.com/profile.php?id=61555610825136" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+        
+        
+      </ul>
     </div>
 
     <!-- Back Button -->
