--- a/Casa-Abierta-main/Casa-Abierta-main/cosmetologia.html
+++ b/Casa-Abierta-main/Casa-Abierta-main/cosmetologia.html
@@ -6,133 +6,7 @@
   <title>Cosmetología - Casa Abierta</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <style>
-    :root {
-      --primary-color: #0033A0;
-      --secondary-color: #0066CC;
-      --accent-color: #27AE60;
-      --dark-color: #1A252F;
-      --light-color: #ECF0F1;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--light-color);
-      color: var(--dark-color);
-    }
-
-    .navbar {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%) !important;
-      box-shadow: 0 4px 20px rgba(0,51,160,0.1);
-    }
-
-    .navbar-brand {
-      font-weight: 700;
-      color: white !important;
-    }
-
-    .hero {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-      color: white;
-      padding: 4rem 0;
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: 800;
-      margin-bottom: 1rem;
-    }
-
-    .hero .badge {
-      background: var(--accent-color);
-      font-size: 1.2rem;
-      padding: 0.5rem 1rem;
-    }
-
-    .content-section {
-      padding: 4rem 0;
-    }
-
-    .info-card {
-      background: white;
-      border-radius: 20px;
-      padding: 2rem;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-      margin-bottom: 2rem;
-      border: 2px solid #E2E8F0;
-    }
-
-    .info-card h3 {
-      color: var(--primary-color);
-      font-weight: 700;
-      margin-bottom: 1.5rem;
-      display: flex;
-      align-items: center;
-    }
-
-    .info-card h3 i {
-      margin-right: 0.5rem;
-      color: var(--accent-color);
-    }
-
-    .feature-list {
-      list-style: none;
-      padding: 0;
-    }
-
-    .feature-list li {
-      padding: 0.5rem 0;
-      border-bottom: 1px solid #E2E8F0;
-      display: flex;
-      align-items: center;
-    }
-
-    .feature-list li:last-child {
-      border-bottom: none;
-    }
-
-    .feature-list li i {
-      color: var(--accent-color);
-      margin-right: 1rem;
-      width: 20px;
-    }
-
-    .btn-back {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      border: none;
-      padding: 1rem 2rem;
-      border-radius: 50px;
-      color: white;
-      font-weight: 600;
-      text-decoration: none;
-      display: inline-block;
-      margin-top: 2rem;
-      transition: all 0.3s ease;
-    }
-
-    .btn-back:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 20px rgba(0,51,160,0.3);
-      color: white;
-      text-decoration: none;
-    }
-
-    .highlight-box {
-      background: linear-gradient(135deg, #FFF3CD 0%, #FFEAA7 100%);
-      border: 2px solid #F39C12;
-      border-radius: 15px;
-      padding: 2rem;
-      margin: 2rem 0;
-      text-align: center;
-    }
-
-    .highlight-box h4 {
-      color: #8B4513;
-      font-weight: 700;
-      margin-bottom: 1rem;
-    }
-  </style>
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar -->
@@ -163,9 +37,9 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
-      <h1><i class="fas fa-spa me-3"></i>Programa de Cosmetología</h1>
+      <h1><i class="fas fa-spa me-3"></i>Curso de Cosmetología</h1>
       <p class="lead">Belleza y Cuidado Personal Profesional</p>
-      <span class="badge">3 años académicos</span>
+      <button class="btn btn-outline-primary">3 años académicos de Cosmetología</button>
     </div>
   </section>
 
@@ -174,25 +48,34 @@
     <!-- Descripción -->
     <div class="info-card">
       <h3><i class="fas fa-info-circle"></i>Descripción del Programa</h3>
-      <p>El programa de Cosmetología enseña técnicas profesionales de belleza y cuidado personal, preparando a los estudiantes para trabajar en salones de belleza, spas y centros de estética. Aprenderás a realzar la belleza natural de las personas mediante tratamientos especializados y técnicas avanzadas.</p>
+      <p>Abarca la enseñanza y el aprendizaje de todos los conocimientos teóricos
+prácticos a la par de las destrezas y valores como: especialista de la belleza. de conformidad con los principios y conceptos establecidos a través de los estándares y competencias que sirven de fundamento para la ocupación.
+Por tal razón, el curso esta dirigido a que el estudiante logre el dominio pleno de las destrezas académicas y ocupacionales. </p>
+
+<p>El mismo responde a los requerimientos de la Junta Examinadora de
+Especialistas en belleza para lograr revalidación y licenciatura en la ocupación.</p>
+Al finalizar el curso, el estudiante completa un certiticado de horas trabajadas además de su diploma de cuarto año.</p>
+
+  <h3><i class="fas fa-info-circle"></i>Duración del Curso</h3>
+<p>El curso está diseñado para ofrecerse durante los grados 10mo, 11mo y 12mo donde el estudiante acumula 1,000 horas. El curso integra a estudiantes de Educación Especial.</p>
     </div>
 
      <!-- Requisitos -->
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.50 en adelante</li>
-        <li><i class="fas fa-birthday-cake"></i>Interes en aprender sobre cosmetología</li>
-        <li><i class="fas fa-handshake"></i>Entrevista de admisión</li>
+        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.00 o más y debe completar el 8vo grado.</li>
+        <li><i class="fas fa-birthday-cake"></i>Interes en aprender sobre cosmetología.</li>
+        <li><i class="fas fa-handshake"></i>Entrevista de admisión.</li>
       </ul>
     </div>
 
     <!-- Información del Maestro -->
     <div class="info-card">
       <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
-      <p><strong>Nombre:</strong> [Nombre del Maestro]</p>
-      <p><strong>Años de experiencia:</strong> 9 años</p>
-      <p><strong>Correo electrónico:</strong> maestro@escuela.com</p>
+      <p><strong>Nombre:</strong> Nivia Ortiz Montesino</p>
+      <p><strong>Años de experiencia:</strong> 20 años</p>
+      <p><strong>Correo electrónico:</strong> d20560@de.pr.gov</p>
     </div>
 
     <!-- Cursos Principales -->
@@ -248,6 +131,8 @@
       <h4><i class="fas fa-star"></i>¿Por qué elegir Cosmetología?</h4>
       <p>La belleza es una industria en crecimiento constante. Nuestro programa te prepara para ser un profesional creativo y técnico, capaz de transformar la apariencia de las personas y hacerlas sentir seguras y hermosas.</p>
     </div>
+
+   
 
     <!-- Back Button -->
     <div class="text-center">
