--- a/Casa-Abierta-main/Casa-Abierta-main/mercadeo.html
+++ b/Casa-Abierta-main/Casa-Abierta-main/mercadeo.html
@@ -6,133 +6,7 @@
   <title>Mercadeo - Casa Abierta</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <style>
-    :root {
-      --primary-color: #0033A0;
-      --secondary-color: #0066CC;
-      --accent-color: #27AE60;
-      --dark-color: #1A252F;
-      --light-color: #ECF0F1;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--light-color);
-      color: var(--dark-color);
-    }
-
-    .navbar {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%) !important;
-      box-shadow: 0 4px 20px rgba(0,51,160,0.1);
-    }
-
-    .navbar-brand {
-      font-weight: 700;
-      color: white !important;
-    }
-
-    .hero {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-      color: white;
-      padding: 4rem 0;
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: 800;
-      margin-bottom: 1rem;
-    }
-
-    .hero .badge {
-      background: var(--accent-color);
-      font-size: 1.2rem;
-      padding: 0.5rem 1rem;
-    }
-
-    .content-section {
-      padding: 4rem 0;
-    }
-
-    .info-card {
-      background: white;
-      border-radius: 20px;
-      padding: 2rem;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-      margin-bottom: 2rem;
-      border: 2px solid #E2E8F0;
-    }
-
-    .info-card h3 {
-      color: var(--primary-color);
-      font-weight: 700;
-      margin-bottom: 1.5rem;
-      display: flex;
-      align-items: center;
-    }
-
-    .info-card h3 i {
-      margin-right: 0.5rem;
-      color: var(--accent-color);
-    }
-
-    .feature-list {
-      list-style: none;
-      padding: 0;
-    }
-
-    .feature-list li {
-      padding: 0.5rem 0;
-      border-bottom: 1px solid #E2E8F0;
-      display: flex;
-      align-items: center;
-    }
-
-    .feature-list li:last-child {
-      border-bottom: none;
-    }
-
-    .feature-list li i {
-      color: var(--accent-color);
-      margin-right: 1rem;
-      width: 20px;
-    }
-
-    .btn-back {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      border: none;
-      padding: 1rem 2rem;
-      border-radius: 50px;
-      color: white;
-      font-weight: 600;
-      text-decoration: none;
-      display: inline-block;
-      margin-top: 2rem;
-      transition: all 0.3s ease;
-    }
-
-    .btn-back:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 20px rgba(0,51,160,0.3);
-      color: white;
-      text-decoration: none;
-    }
-
-    .highlight-box {
-      background: linear-gradient(135deg, #FFF3CD 0%, #FFEAA7 100%);
-      border: 2px solid #F39C12;
-      border-radius: 15px;
-      padding: 2rem;
-      margin: 2rem 0;
-      text-align: center;
-    }
-
-    .highlight-box h4 {
-      color: #8B4513;
-      font-weight: 700;
-      margin-bottom: 1rem;
-    }
-  </style>
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar -->
@@ -145,111 +19,114 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#servicios">Servicios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#contacto">Contacto</a>
-          </li>
+        <ul class="navbar-nav ms-auto text-center">
+          <li class="nav-item"><a class="nav-link" href="index.html#inicio"><i class="fas fa-home me-2"></i>Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#servicios"><i class="fas fa-cogs me-2"></i>Servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#contacto"><i class="fas fa-envelope me-2"></i>Contacto</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section class="hero">
     <div class="container">
-      <h1><i class="fas fa-chart-line me-3"></i>Programa de Mercadeo</h1>
-      <p class="lead">Marketing y Estrategias Comerciales</p>
-      <span class="badge">3 años académicos</span>
+      <h1><i class="fas fa-chart-line me-3"></i>Programa de Administración de Empresas</h1>
+      <p class="lead">Especialidad: Representante de Ventas y Servicios Empresariales</p>
+      <button class="btn btn-outline-primary">3 años académicos de Mercadeo</button>
     </div>
   </section>
 
-  <!-- Content -->
+  <!-- Contenido -->
   <div class="container content-section">
+
     <!-- Descripción -->
     <div class="info-card">
       <h3><i class="fas fa-info-circle"></i>Descripción del Programa</h3>
-      <p>El programa de Mercadeo prepara a los estudiantes para comprender y aplicar estrategias de marketing efectivas en el mundo empresarial moderno, combinando teoría y práctica para desarrollar habilidades comerciales. Aprenderás a identificar oportunidades de mercado y crear estrategias que impulsen el éxito de las empresas.</p>
+      <p><strong><i class="fas fa-bullseye"></i> Misión:</strong> Formar estudiantes con las competencias necesarias para desempeñarse con excelencia en ventas, servicio al cliente y áreas relacionadas al mercadeo, fomentando liderazgo, iniciativa, ética profesional y responsabilidad.</p>
+      <p><strong><i class="fas fa-lightbulb"></i> Visión:</strong> Ser un programa líder en la preparación de estudiantes técnicos altamente competentes, capaces de integrarse al mercado laboral o continuar estudios en áreas empresariales con una base sólida en mercadeo, ventas y servicio.</p>
+      <p><i class="fas fa-hands-helping"></i> Fortalecer el espíritu de servicio y la conciencia cívica del estudiante para que sea más sensible y solidario con los demás.</p>
     </div>
 
     <!-- Requisitos -->
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.50 en adelante</li>
-        <li><i class="fas fa-birthday-cake"></i>Intereses en aprender sobre comercio</li>
-        <li><i class="fas fa-handshake"></i>Entrevista de admisión</li>
+        <li><i class="fas fa-graduation-cap"></i>Promedio general mínimo de 2.00</li>
+        <li><i class="fas fa-chart-line"></i>Buena conducta y disposición para el trabajo en equipo</li>
+        <li><i class="fas fa-clipboard-list"></i>Interés en ventas, servicio al cliente o negocios</li>
+        <li><i class="fas fa-comments"></i> Ingresar al programa desde noveno grado</li>
+        
       </ul>
     </div>
 
-    <!-- Información del Maestro -->
+    <!-- Maestro -->
     <div class="info-card">
       <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
-      <p><strong>Nombre:</strong> [Nombre del Maestro]</p>
-      <p><strong>Años de experiencia:</strong> 8 años</p>
-      <p><strong>Correo electrónico:</strong> maestro@escuela.com</p>
+      <p><strong><i class="fas fa-user"></i> Nombre:</strong> Ada J. Rivera Alejandro</p>
+      <p><strong><i class="fas fa-briefcase"></i> Años de experiencia:</strong> 20 años</p>
+      <p><strong><i class="fas fa-envelope"></i> Correo electrónico:</strong> de155982@miescuela.pr</p>
     </div>
 
     <!-- Cursos Principales -->
     <div class="info-card">
-      <h3><i class="fas fa-book"></i>Cursos Principales</h3>
-      <div class="row">
-        <div class="col-md-6">
-          <ul class="feature-list">
-            <li><i class="fas fa-bullhorn"></i>Principios de mercadeo</li>
-            <li><i class="fas fa-ad"></i>Publicidad y promoción</li>
-            <li><i class="fas fa-users"></i>Comportamiento del consumidor</li>
-            <li><i class="fas fa-search"></i>Investigación de mercados</li>
-            <li><i class="fas fa-handshake"></i>Ventas y negociación</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <ul class="feature-list">
-            <li><i class="fas fa-hashtag"></i>Marketing digital</li>
-            <li><i class="fas fa-share-alt"></i>Redes sociales</li>
-            <li><i class="fas fa-tag"></i>Gestión de marca</li>
-            <li><i class="fas fa-chart-bar"></i>Análisis de mercado</li>
-            <li><i class="fas fa-project-diagram"></i>Estrategias comerciales</li>
-          </ul>
-        </div>
-      </div>
+      <h3><i class="fas fa-book"></i>Áreas de adiestramiento</h3>
+      <ul class="feature-list text-center">
+        <li><i class="fas fa-handshake"></i>Ventas y Servicio al Cliente</li>
+        <li><i class="fas fa-shopping-cart"></i>Compras</li>
+        <li><i class="fas fa-calculator"></i>Finanzas</li>
+        <li><i class="fas fa-ad"></i>Publicidad</li>
+        <li><i class="fas fa-users"></i>Relaciones Públicas</li>
+        <li><i class="fas fa-box"></i>Empaque</li>
+        <li><i class="fas fa-cogs"></i>Operaciones de Negocios</li>
+        <li><i class="fas fa-chart-line"></i>Promoción de Ventas</li>
+        <li><i class="fas fa-palette"></i>Envoltura Artística</li>
+        <li><i class="fas fa-cash-register"></i>Manejo de Caja Registradora</li>
+        <li><i class="fas fa-mobile-alt"></i>Mercadeo Digital</li>
+      </ul>
     </div>
 
-    <!-- Oportunidades de Empleo -->
+    <!-- Empleo -->
     <div class="info-card">
       <h3><i class="fas fa-briefcase"></i>Oportunidades de Empleo</h3>
-      <div class="row">
-        <div class="col-md-6">
-          <ul class="feature-list">
-            <li><i class="fas fa-user-tie"></i>Ejecutivo de ventas</li>
-            <li><i class="fas fa-ad"></i>Especialista en publicidad</li>
-            <li><i class="fas fa-chart-line"></i>Analista de mercados</li>
-            <li><i class="fas fa-hashtag"></i>Community manager</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <ul class="feature-list">
-            <li><i class="fas fa-building"></i>Gerente de marca</li>
-            <li><i class="fas fa-bullhorn"></i>Coordinador de marketing</li>
-            <li><i class="fas fa-shopping-cart"></i>Asesor comercial</li>
-            <li><i class="fas fa-project-diagram"></i>Planificador estratégico</li>
-          </ul>
-        </div>
-      </div>
+<p><strong>Estudiantes que completan esta especialidad pueden desempeñarse en áreas como:</strong> </p>
+      <ul class="feature-list text-center">
+        <li><i class="fas fa-handshake"></i>Representante de ventas</li>
+        <li><i class="fas fa-shopping-cart"></i>Asociado de servicio al cliente</li>
+        <li><i class="fas fa-calculator"></i>Cajero/a</li>
+        <li><i class="fas fa-ad"></i>Promotor o merchandiser</li>
+        <li><i class="fas fa-users"></i>Auxiliar de oficina o asistente de mercadeo</li>
+        <li><i class="fas fa-box"></i>Empleos en tiendas por departamento, supermercados y empresas de servicios</li>
+        <li><i class="fas fa-cogs"></i>Posiciones iniciales en publicidad, inventario y ventas digitales</li>
+      </ul>
     </div>
 
-    <!-- Highlight Box -->
-    <div class="highlight-box">
-      <h4><i class="fas fa-star"></i>¿Por qué elegir Mercadeo?</h4>
-      <p>En un mundo competitivo, el marketing es clave para el éxito empresarial. Nuestro programa te enseña a crear estrategias efectivas, analizar mercados y conectar con los consumidores para impulsar el crecimiento de las empresas.</p>
+       <!-- Cursos Principales -->
+    <div class="info-card">
+      <h3><i class="fas fa-book"></i>¿Por qué elegir Mercadeo?</h3>
+      <ul class="feature-list text-center">
+        <li><i class="fas fa-handshake"></i>Es un taller dinámico, práctico y centrado en experiencias reales</li>
+        <li><i class="fas fa-shopping-cart"></i>Desarrolla destrezas esenciales que buscan todos los patrones</li>
+        <li><i class="fas fa-calculator"></i>Fortalece la comunicación, seguridad personal y liderazgo</li>
+        <li><i class="fas fa-ad"></i>Prepara para competencias y certificaciones a través de DECA</li>
+        <li><i class="fas fa-users"></i>Permite participar activamente en la Cooperativa Juvenil</li>
+        <li><i class="fas fa-box"></i>Amplía las oportunidades de empleo y estudios universitarios</li>
+        <li><i class="fas fa-cogs"></i>Forma estudiantes creativos, proactivos y preparados para el mundo laboral</li>
+
     </div>
 
-    <!-- Back Button -->
+    <!-- Redes Sociales -->
+    <div class="info-card">
+      <h3><i class="fas fa-share-alt"></i>Redes Sociales</h3>
+      <p>Síguenos en nuestras redes sociales para más información y actualizaciones:</p>
+      <ul class="feature-list">
+        <li><a href="https://www.facebook.com/profile.php?id=100086953602999" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+            <li><a href="https://www.instagram.com/deca.pcb" target="_blank"><i class="fab fa-facebook"></i> Instagram</a></li>
+        
+      </ul>
+    </div>
+
+    <!-- Volver -->
     <div class="text-center">
       <a href="index.html" class="btn-back">
         <i class="fas fa-arrow-left me-2"></i>Volver al Inicio
